# scorecard-mcp

./: README.md  pyproject.toml
src/scorecard_mcp/: __init__.py
