[project]
name = "scorecard-mcp"
version = "0.0.4"
description = "Basic Model Context Protocol (MCP) server for OpenSSF Scorecard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.1.3",
    "pydantic>=2.0.0",
]


[project.scripts]
scorecard-mcp = "scorecard_mcp:main"
